libs/@local/hashql/mir/tests/ui/reify/external-module.jsonc
//@ run: fail
//@ description: TODO
["::graph::tmp::decision_time_now"]
//~^ ERROR external modules are not supported
